--- a/single-catagory.html
+++ b/single-catagory.html
@@ -22,8 +22,7 @@
           <div class="navbar-brand">
             <a href="index.html"><h1>LR Mobile Accessories</h1></a>
             <p>
-              <img src="images/star-k-logo.png" alt="quality certification">
-              <span>Best Quality</span>
+             <span class="glyphicon glyphicon-ok"> Best Quality</span>
             </p>
           </div>
 
@@ -46,11 +45,11 @@
                 <span class="glyphicon glyphicon-link"></span><br class="hidden-xs"> Items</a>
             </li>
             <li>
-              <a href="#">
+              <a href="about.html">
                 <span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs"> About</a>
             </li>
             <li>
-              <a href="#">
+              <a href="contact.html">
                 <span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs"> Contact Us</a>
             </li>
             <li id="phone" class="hidden-xs">
