--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <div class="navbar-brand">
               <a href="index.html"><h1>LR Mobile Accessories</h1></a>
               <p>
-               <span class="glyphicon glyphicon-ok"> Best Quality</span>
+                <span class="glyphicon glyphicon-ok"> Best Quality</span>
               </p>
             </div>
 
@@ -66,28 +66,10 @@
 
 
     <div id="main-content" class="container">
-      <div class="jumbotron">
-        <img src="images/home-image-768.jpg" alt="Picture of the shop" class="img-responsive visible-xs">
-      </div>
-
-      <div  id="home-tiles" class="row">
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="items-catagories.html"><div id="items-tile"> <span>Items</span></div></a>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="items-catagories.html"><div id="specials-tile"> <span>Specials</span></div></a>
-        </div>
-
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <a href="https://goo.gl/maps/4sfaaG5AMamqtTmPA" target="_blank">
-            <div id="map-tile">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57903.129524404445!2d91.82596225528975!3d24.899837316822165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x375054d3d270329f%3A0xf58ef93431f67382!2sSylhet%2C%20Bangladesh!5e0!3m2!1sen!2sgr!4v1605616341805!5m2!1sen!2sgr" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-              <span>Map</span>
-            </div>
-          </a>
-        </div>
-      </div>
+      <h1 class="contact-header">Contact Us</h1>
+      <h4 class="contact-text">
+        ed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+      </h4>
     </div> <!-- End of home tile --></div>
 
 
